# kestrel-timer

./: Cargo.toml  README.md  README_CN.md
benches/: channel_benchmark.rs  mpsc_benchmark.rs  notify_benchmark.rs  ringbuf_benchmark.rs  service_benchmark.rs  wheel_benchmark.rs
src/: config.rs  error.rs  lib.rs  service.rs  task.rs  timer.rs  wheel.rs
src/tests/: mod.rs
src/tests/service/: batch_tests.rs  cancel_tests.rs  periodic_tests.rs  postpone_tests.rs
src/tests/timer/: batch_tests.rs  cancel_tests.rs  periodic_tests.rs  postpone_tests.rs
src/tests/wheel/: advanced_tests.rs  batch_tests.rs  periodic_tests.rs  postpone_tests.rs
src/timer/: handle.rs
src/utils/: notify.rs  oneshot.rs  ringbuf.rs  spsc.rs  vec.rs
tests/: integration_test.rs
