[package]
name = "kestrel-timer"
version = "0.1.0"
edition = "2024"
authors = ["ShaoG-R"]
license = "MIT OR Apache-2.0"
description = "基于时间轮（Timing Wheel）算法的高性能异步定时器系统"
readme = "README.md"
repository = "https://github.com/ShaoG-R/kestrel-timer"
homepage = "https://github.com/ShaoG-R/kestrel-timer"
documentation = "https://docs.rs/kestrel-timer"
keywords = ["timer", "timing-wheel", "async", "tokio", "scheduler"]
categories = ["asynchronous", "concurrency", "data-structures"]
exclude = [
    "target/*",
    ".git/*",
    ".github/*",
]

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["test-util", "macros", "rt-multi-thread", "parking_lot"] }
parking_lot = "0.12.5"
rustc-hash = "2.1.1"
futures = "0.3"
smallvec = "1.15.1"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[[bench]]
name = "service_benchmark"
harness = false

[[bench]]
name = "wheel_benchmark"
harness = false
