[package]
name = "kestrel-timer"
version = "0.2.2"
edition = "2024"
authors = ["ShaoG-R"]
license = "MIT OR Apache-2.0"
description = "High-performance async timer library based on Hierarchical Timing Wheel algorithm"
readme = "README.md"
repository = "https://github.com/ShaoG-R/kestrel-timer"
homepage = "https://github.com/ShaoG-R/kestrel-timer"
documentation = "https://docs.rs/kestrel-timer"
keywords = ["timer", "timing-wheel", "async", "tokio", "scheduler"]
categories = ["asynchronous", "concurrency", "data-structures"]
exclude = [
    "target/*",
    ".git/*",
    ".github/*",
]

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["test-util", "macros", "rt-multi-thread", "parking_lot"] }
parking_lot = "0.12.5"
rustc-hash = "2.1.1"
futures = "0.3"
lite-sync = "0.1.1"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
rtrb = "0.3.2"

[[bench]]
name = "service_benchmark"
harness = false

[[bench]]
name = "wheel_benchmark"
harness = false